# cocos2d-squirrel

./: README.md
cocos/base/: CCScriptSupport.h
cocos/scripting/squirrel-bindings/: CMakeLists.txt
cocos/scripting/squirrel-bindings/auto/: squirrel_cocos2dx_auto.cpp  squirrel_cocos2dx_auto.hpp
cocos/scripting/squirrel-bindings/auto/api/: Action.nut  ActionCamera.nut  ActionEase.nut  ActionInstant.nut  ActionInterval.nut  ActionManager.nut  ActionTween.nut  AffineTransform.nut  Animate.nut  Animate3D.nut  Animation.nut  Animation3DData.nut  AnimationCache.nut  AnimationFrame.nut  AnimationFrameData.nut  Application.nut  AtlasNode.nut  BezierBy.nut  BezierTo.nut  BlendFunc.nut  Blink.nut  CallFunc.nut  Camera.nut  CardinalSplineBy.nut  CardinalSplineTo.nut  ClippingNode.nut  Color3B.nut  Color4B.nut  Color4F.nut  Component.nut  Console.nut  DelayTime.nut  Director.nut  DrawNode.nut  EaseBackIn.nut  EaseBackInOut.nut  EaseBackOut.nut  EaseBezierAction.nut  EaseBounceIn.nut  EaseBounceInOut.nut  (+178 more)
cocos/scripting/squirrel-bindings/manual/: SquirrelBasicConversion.cpp  SquirrelBasicConversion.h  SquirrelEngine.cpp  SquirrelEngine.h  squirrel_cocos2dx_manual.cpp  squirrel_cocos2dx_manual.hpp
cocos/scripting/squirrel-bindings/proj.android/: Android.mk
cocos/scripting/squirrel-bindings/proj.ios_mac/cocos2d_squirrel_bindings.xcodeproj/: project.pbxproj
cocos/scripting/squirrel-bindings/script/: Cocos2dx.nut
templates/: cocos2dx_files.json
templates/squirrel-template-default/: cocos-project-template.json
tools/: .gitignore
tools/bindings-generator/: generator.py
(+38 files in other folders)
